# hermes-hudui

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml
backend/: file_watcher.py  main.py
backend/chat/: engine.py
backend/static/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentsPanel.tsx  BootScreen.tsx  ChatPanel.tsx  CommandPalette.tsx  CorrectionsPanel.tsx  CronPanel.tsx  DashboardPanel.tsx  HealthPanel.tsx  MemoryPanel.tsx  PatternsPanel.tsx  ProfilesPanel.tsx  ProjectsPanel.tsx  SessionsPanel.tsx  SkillsPanel.tsx  TokenCostsPanel.tsx  TopBar.tsx
frontend/src/components/chat/: Composer.tsx  MessageBubble.tsx  MessageThread.tsx  ReasoningBlock.tsx  SessionSidebar.tsx  ToolCallCard.tsx
frontend/src/hooks/: useTheme.tsx  useWebSocket.ts
