[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-dashboard"
version = "0.1.0"
description = "AI代理监控仪表盘 - Web UI监控界面"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name"},
]
keywords = ["ai", "agent", "dashboard", "webui", "monitor", "代理", "监控"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pyyaml>=6.0",
    "watchfiles>=0.24.0",
]

[project.optional-dependencies]
tui = ["hermes-hud>=0.5.0"]
chat = ["hermes-agent>=0.1.0"]

[project.scripts]
agent-dashboard = "backend.main:cli"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
backend = ["static/**/*"]
